# kaggle-nemotron-reasoning

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  OVERNIGHT_REPORT.md  PLAN.md  README.md  pyproject.toml
adapters/baseline-unsloth-v1/: recipe.md
adapters/train-real-v1/: recipe.md
adapters/train-real-v2/: recipe.md
adapters/train-structured-v3-curated/: recipe.md
adapters/train-structured-v3-curated-ep2/: recipe.md
data/analysis/: cot_audit.md  lora_audit_v4.md  qa_v0_3_0.md  qa_v3_corrected.md  transformation_taxonomy.md
docs/: lecciones-aprendidas.md
notebooks/my_kernels/baseline-unsloth-v1/: baseline-unsloth-v1.ipynb  kernel-metadata.json
notebooks/my_kernels/eval-holdout-baseline-v1/: eval-holdout-baseline-v1.ipynb  (+1 more)
scripts/: handoff_v3p1_to_v3p2.py  overnight.py
src/data/: build_real_corpus.py  build_synthetic_dataset.py  math_primitives.py  programmatic_cot.py  prompt_parsers.py  puzzle_generators.py  regenerate_cot.py  rewriter.py  rewriter_v2.py  transformation_extended.py
src/eval/: __init__.py  classify_family.py  extractor.py  kernel_lint.py  parse_structured_cot.py  score.py  splitter.py  splitter_clean.py  verifier.py  verify_synthetic.py
tests/: test_classify_family.py  test_cot_envelope_strict.py  test_dataset_integration.py  test_extractor.py  test_kernel_lint.py  test_math_primitives.py  test_programmatic_cot_easy.py  test_programmatic_cot_hard.py  test_programmatic_cot_medium.py  test_prompt_parsers.py  test_puzzle_generators.py  test_rewriter.py  test_score.py  test_transformation_arithmetic.py  test_verifier.py
(+36 files in other folders)
