[project]
name = "kaggle-nemotron"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "kaggle>=2.1.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "safetensors>=0.7.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
